Writing through news summaries
Expanded the Week in Review section with new updates on tech and finance, including major lawsuits, AI developments, and market trends.

--- a/2025/2025-11-09-wir.md
+++ b/2025/2025-11-09-wir.md
@@ -6,11 +6,69 @@
 
 **Lead item goes here.** Yadda yadda yadda.
 
-### Week in Review: Nov. 2-8, 2025
+<!-- Some possibilities: 
 
-- Big Tech Milestones: WSJ on how Apple staved off tariff disaster this year. https://www.wsj.com/tech/apple-2025-tim-cook-36af914a?st=YwMB3F&reflink=desktopwebshare_permalink | NVidia hit $5T valuation. Yowza. <!-- Link TK --> | Global stocks are quietly outperforming the US. https://www.wsj.com/finance/stocks/u-s-stocks-are-breaking-records-the-rest-of-the-world-is-doing-better-8e1005be?st=DkHYTc&reflink=desktopwebshare_permalink
+- AICURATION: Which has been better at curating headlines in this newsletter, ChatGPT or Gemini?
 
-- **Hyperliquid update** tk <!-- Need to get something into the newsletter on these guys. Trading volume has been taking off and we haven't mentioned. Some search results that might help: https://duckduckgo.com/?q=hyperliquid+monthly+volume&t=brave&ia=web -->
+- MARKETS: When the stock market is this arbitrary and leveraged to just a few tech behemoths, the frequent criticism that token prices "aren't based on anything" starts to ring hollow. Have you people looked in the mirror lately?
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- **Amazon sues Perplexity AI over “agentic” shopping tool**
+  [https://www.reuters.com/business/retail-consumer/perplexity-receives-legal-threat-amazon-over-agentic-ai-shopping-tool-2025-11-04/](https://www.reuters.com/business/retail-consumer/perplexity-receives-legal-threat-amazon-over-agentic-ai-shopping-tool-2025-11-04/)
+  Amazon filed a lawsuit accusing Perplexity of deploying an AI-agent that accessed Amazon customer accounts disguised as human browsing. The dispute spotlights how “agentic” AI (AI that acts autonomously on behalf of users) is beginning to clash with platform policies, security concerns and the question of how such tools are regulated.
+  ([Reuters][1])[1]: https://www.reuters.com/business/retail-consumer/perplexity-receives-legal-threat-amazon-over-agentic-ai-shopping-tool-2025-11-04/?utm_source=chatgpt.com "Amazon sues Perplexity over 'agentic' shopping tool" <!-- ChatGPT -->
+
+- **Apple Inc. to use Google’s 1.2 trillion-parameter AI model to run new Siri**
+  [https://www.reuters.com/business/apple-use-googles-ai-model-run-new-siri-bloomberg-news-reports-2025-11-05/](https://www.reuters.com/business/apple-use-googles-ai-model-run-new-siri-bloomberg-news-reports-2025-11-05/)
+  Apple reportedly plans to license Google’s massive 1.2 trillion-parameter model (via its “Gemini” platform) to power a next-gen Siri assistant, rather than waiting for its own in-house system. The move underscores how even major tech companies are leaning into external large-model partnerships, signalling model-scale becomes a key battleground.
+  ([Reuters][2])[2]: https://www.reuters.com/business/apple-use-googles-ai-model-run-new-siri-bloomberg-news-reports-2025-11-05/?utm_source=chatgpt.com "Apple to use Google's AI model to run new Siri, Bloomberg News reports" <!-- ChatGPT -->
+
+- **Artificial Intelligence Act (EU) may be paused/delayed under US and Big Tech pressure**
+  [https://www.theguardian.com/world/2025/nov/07/european-commission-ai-artificial-intelligence-act-trump-administration-tech-business](https://www.theguardian.com/world/2025/nov/07/european-commission-ai-artificial-intelligence-act-trump-administration-tech-business)
+  According to The Guardian, the European Commission is considering delaying or soft‐launching parts of the AI Act (originally adopted in Aug 2024) in response to intense lobbying by U.S. tech firms and the Trump administration. The story marks a turning point where regulatory momentum may shift in the face of industry pushback.
+  ([The Guardian][3])[3]: https://www.theguardian.com/world/2025/nov/07/european-commission-ai-artificial-intelligence-act-trump-administration-tech-business?utm_source=chatgpt.com "EU could water down AI Act amid pressure from Trump and big tech" <!-- ChatGPT -->
+
+
+
+- **Polygon & fintech startup Anq developing sovereign-backed Indian “stablecoin” model tied to government securities**
+  [https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms](https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms)
+  This initiative in India would link a blockchain-token (tentatively the “Asset Reserve Certificate” or ARC) to government securities/Treasury Bills, representing a hybrid of public-finance and blockchain innovation. A strong signal of where tokenisation meets sovereign infrastructure.
+  ([The Times of India][6])[6]: https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms?utm_source=chatgpt.com "Polygon, Anq developing sovereign-backed Indian 'stablecoin' model tied to government securities, say sources" <!-- ChatGPT -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 - CZ buying off Trump. https://www.wsj.com/finance/currencies/binance-trump-crypto-pardon-cz-changpeng-zhao-1007fde9?st=sEv6SW&reflink=desktopwebshare_permalink
 
@@ -19,6 +77,12 @@
 Digest a bunch o' string from last week...
 
 A new study published in the Harvard Business Review exposed a growing phenomenon called "workslop,"** which is defined as AI-generated content that lacks the substance to meaningfully advance a task. The report found that over 40% of US employees receive such content, leading researchers to conclude that rushed AI deployment without proper training is "destroying productivity." ([The Guardian](https://www.theguardian.com/business/2025/oct/12/ai-workslop-us-employees), Oct. 12, 2025) <!-- Article curated and summarized by Gemini |  The Wikimedia Foundation has reported an 8% decline in human traffic to Wikipedia between May and August 2025, citing the rise of search engines and chatbots providing direct access to Wikipedia content without sending users to the site. This trend, attributed to the growing use of generative AI and social media, has significant implications for the future of online publishing and the sustainability of content creation. ([Decrypt](https://decrypt.co/344845/wikipedia-traffic-drops-ai-answers-eat-free-encyclopedia)) <!-- Article curated by me, summarized by Leo/Llama 3.1 8B | AI assistants make widespread sourcing errors, new research finds [https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/](https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/) ([Reuters][4]) *Why it matters*: As AI becomes more embedded in workflows (news, search, assistance) the “trust” and “accuracy” aspects are coming into sharper focus — relevant for enterprise and consumer contexts. [4]: https://www.reuters.com/business/media-telecom/ai-assistants-make-widespread-errors-about-news-new-research-shows-2025-10-21/?utm_source=chatgpt.com "AI assistants make widespread errors about the news, new ..."  <!-- Curated by ChagGPT. | **Experts warn that the growing use of AI in clinical settings could create an intractable "blame game" for medical failings.** The introduction of AI-powered tools for diagnosis and care raises complex legal issues, as patients may face significant barriers in demonstrating fault due to a lack of transparency into the AI's internal workings and a challenge in proposing a reasonable alternative design. The report, which came out of a summit hosted by the *Journal of the American Medical Association (JAMA)*, highlights the need for dedicated funding to properly assess AI tool performance in real-world clinical use. ([The Guardian](https://www.theguardian.com/technology/2025/oct/13/ai-tools-medical-health-liability-artificial-intelligence)) <!-- Article curated and summarized by Gemini | **Cisco Study: Only 13% of Global Enterprises Are ‘AI-Ready’ for Scaled Deployment** The Cisco 2025 AI Readiness Index revealed that while virtually all businesses are experimenting with AI, only 13% are truly prepared to deploy and scale AI solutions with measurable value. The report suggests most companies face significant gaps in critical areas like data quality, security, talent, and governance, indicating that the path from AI pilot to enterprise transformation remains highly challenging. [Link](https://dig.watch/updates/new-cisco-study-shows-most-companies-arent-ai-ready) <!-- Story curated by Google Gemini | **Major Study Finds AI Chatbots Misrepresent News Content Nearly Half the Time** A new study by 22 international public service media organizations, including the BBC and NPR, found that AI assistants like ChatGPT, Copilot, and Google's Gemini systematically distort news content in 45% of responses. The research found significant sourcing problems and factual errors, raising major alarms over AI's role in information integrity as public reliance on these tools for news consumption grows. ([DW](https://www.dw.com/en/ai-chatbots-misrepresent-news-almost-half-the-time-says-major-new-study/a-74392921)) <!-- Story curated by Google Gemini | [“These nonprofits lobbied to regulate OpenAI — then the subpoenas came”](https://www.theverge.com/ai-artificial-intelligence/801994/openai-subpoenas-intimidation-tactics-nonprofits-elon-musk-restructuring) (The Verge) — ([The Verge][1]) A deep dive into how OpenAI is deploying broad subpoenas against nonprofit organisations critical of its governance and restructuring—which poses serious questions about power, oversight and AI company accountability. <!-- Story curated by ChatGPT -->
+
+
+
+
+- **Study Finds AI Assistants "Flunk" News Integrity Test** A critical new study revealed that current general-purpose AI assistants, when asked for news, generated responses that contained factual issues, misrepresentations, or lacked context in nearly half of all queries tested. The findings underscore the growing crisis of trust in AI-generated information, warning that current error rates are "alarmingly high" and insufficient for AI assistants to be reliable sources of news. **Source:** JD Supra (citing a major study) **Link:** [Beyond the Hype: Major Study Reveals AI Assistants Have Issues in Nearly Half of Responses](https://www.jdsupra.com/legalnews/beyond-the-hype-major-study-reveals-ai-1127576/) <!-- Gemini-->
+
 
 - **Microsoft's AI Investments:** Microsoft signed a $\$9.7$ billion cloud services agreement with Australian AI infrastructure provider IREN to secure access to Nvidia chips, aiming to bolster its capacity to meet surging AI demand. This deal, along with a revised agreement with **OpenAI**, briefly pushed Microsoft's valuation to $\$4$ trillion for the second time this year. Furthermore, Microsoft plans to ship over 60,000 Nvidia Blackwell AI chips to the United Arab Emirates for use in data centers. <!--
 
@@ -88,7 +152,6 @@ Gemini
   *Summary:* Details how Google Cloud’s rise has been powered by AI, shifting from a laggard to a key driver for Alphabet Inc.. ([Reuters][2]) <!-- ChatGPT -->
   [2]: https://www.reuters.com/business/ai-turned-google-cloud-also-ran-into-alphabets-growth-driver-2025-10-31/?utm_source=chatgpt.com "AI turned Google Cloud from also-ran into Alphabet's ..."
 
-
 - [“Taiwan’s MediaTek targets billions in AI accelerator-chip revenue by 2027” — Reuters](https://www.reuters.com/business/media-telecom/taiwans-mediatek-targets-billions-ai-accelerator-chip-revenue-by-2027-2025-10-31/)
   *Summary:* MediaTek outlines aggressive AI ASIC chip ambitions, signalling the hardware side of the AI boom scaling up in Asia. ([Reuters][3]) <!-- ChatGPT -->
   [3]: https://www.reuters.com/business/media-telecom/taiwans-mediatek-targets-billions-ai-accelerator-chip-revenue-by-2027-2025-10-31/?utm_source=chatgpt.com "Taiwan's MediaTek targets billions in AI accelerator chip revenue by 2027"
@@ -114,11 +177,47 @@ Gemini
 
 - [SLB launches new AI tool “Tela” to serve energy-industry workflows](https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/) — Reuters, Nov 3 2025. *Why it matters:* Demonstrates how AI is moving beyond hype into domain-specific deployment (energy/oil services) — showing the “enterprise operational” phase rather than just pilot projects. ([Reuters][2]) [2]: https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/?utm_source=chatgpt.com "SLB launches new AI product as it focuses on digital sales ..." <!-- ChatGPT -->
 
-- [Bitcoin tumbles to lowest in two weeks as risk-off mood hits crypto markets](https://www.reuters.com/world/china/china-offers-tech-giants-cheap-power-boost-domestic-ai-chips-ft-reports-2025-11-04/) — **Note:** this one is more about macro risk than blockchain protocol nuance; use with caution.
-  *Why it matters:* Highlights how broader risk sentiment and macro factors are spilling into crypto asset markets, showing the interconnectedness of blockchain with global finance. ([Bloomberg][3]) [3]: https://www.bloomberg.com/news/articles/2025-11-04/bitcoin-btc-hits-two-week-low-with-risk-appetite-muted-after-wipeout?utm_source=chatgpt.com "Bitcoin Falls to Lowest Since June as Risk-Off Mood Hits ..." <!-- ChatGPT -->
 
-- [Why Bitcoin ETFs started to bleed out as four-day outflows hit $1.34 billion](https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/) — CryptoSlate, Nov 4 2025.
-  *Why it matters:* The concentrated outflows from major BTC ETF issuers suggest shifting institutional sentiment and potential risk of cascading effects in the crypto asset-funding ecosystem. ([CryptoSlate][4]) [4]: https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/?utm_source=chatgpt.com "Why Bitcoin ETFs started to bleed out as four-day outflows ..." <!-- ChatGPT -->
+
+
+
+
+
+
+
+
+
+
+### Week in Review: Nov. 2-8, 2025
+
+- **Bitcoin hit a fresh 2025 low,** dipping below the $100,000 threshold for the first time in months. Outflows from U.S.-listed bitcoin funds led the selloff, effectively extending a period of weakness traders dubbed "Red October." Since last month, U.S. bitcoin ETFs have shed $1.3 billion in investor money. ([Investopedia](https://www.investopedia.com/bitcoin-s-price-dropped-below-usd100-000-today-for-the-first-time-in-months-11843005)) <!-- [Bitcoin tumbles to lowest in two weeks as risk-off mood hits crypto markets (https://www.reuters.com/world/china/china-offers-tech-giants-cheap-power-boost-domestic-ai-chips-ft-reports-2025-11-04/) — **Note:** this one is more about macro risk than blockchain protocol nuance; use with caution. *Why it matters:* Highlights how broader risk sentiment and macro factors are spilling into crypto asset markets, showing the interconnectedness of blockchain with global finance. ([Bloomberg][3]) [3]: https://www.bloomberg.com/news/articles/2025-11-04/bitcoin-btc-hits-two-week-low-with-risk-appetite-muted-after-wipeout?utm_source=chatgpt.com "Bitcoin Falls to Lowest Since June as Risk-Off Mood Hits ..." <!-- ChatGPT --> | [Why Bitcoin ETFs started to bleed out as four-day outflows hit $1.34 billion](https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/) — CryptoSlate, Nov 4 2025. *Why it matters:* The concentrated outflows from major BTC ETF issuers suggest shifting institutional sentiment and potential risk of cascading effects in the crypto asset-funding ecosystem. ([CryptoSlate][4]) [4]: https://cryptoslate.com/btc-etfs-start-to-bleed-out-as-four-day-outflows-hit-1-34b/?utm_source=chatgpt.com "Why Bitcoin ETFs started to bleed out as four-day outflows ..." <!-- ChatGPT -->
+
+- **Apple has somehow staved off** tariff-related disaster this year. ([Wall Street Journal](https://www.wsj.com/tech/apple-2025-tim-cook-36af914a?st=YwMB3F&reflink=desktopwebshare_permalink))
+
+- **Hyperliquid updates:** https://www.theblock.co/post/377776/redstone-launches-hyperstone-oracle-to-power-permissionless-markets-on-hyperliquid | https://finance.yahoo.com/news/redstone-debut-hyperliquid-standard-lets-150215218.html
+
+
+- **Japan Regulators Greenlight Banks for Stablecoin Issuance**
+    Japan's financial regulator has moved to support the country's three largest banks in their plans to issue stablecoins. This landmark regulatory step in a major G7 economy is expected to dramatically accelerate the institutional adoption of blockchain technology for finance, setting a new precedent for how traditional banking systems integrate with digital assets.
+    * **Source:** CoinDesk (Cited by Blockchain.com)
+    * **Link:** [Japan Regulator to Support Country's 3 Largest Banks in Stablecoin Issuance](https://www.blockchain.com/explorer/news) (Note: The specific CoinDesk article is cited within this link.) <!-- Gemini-->
+
+- **Kazakhstan Plans $1 Billion National Crypto Reserve Fund**
+    Kazakhstan is preparing to launch a national crypto reserve fund by 2026, which is expected to be capitalized with approximately **$1 billion** worth of seized cryptocurrency assets. The move signals a major sovereign initiative to integrate digital assets into the national balance sheet and represents a new approach to managing and utilizing seized criminal crypto holdings.
+    * **Source:** The Block (citing Bloomberg)
+    * **Link:** [Kazakhstan to launch $1 billion crypto reserve fund using seized assets by 2026: Bloomberg](https://www.theblock.co/) <!-- Gemini-->
+
+- **Bank of England urges closer UK–US stablecoin collaboration**
+  [https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/](https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/)
+  The BoE’s deputy governor Sarah Breeden emphasised the “really important” need for the U.K. and the U.S. to align on regulation of stablecoins. This underscores how regulatory convergence (or divergence) is becoming a frontline issue in the token-economy.
+  ([Reuters][4])[4]: https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/?utm_source=chatgpt.com "Bank of England's Breeden urges closer UK-US stablecoin collaboration" <!-- ChatGPT -->
+
+- **Japan’s crypto players jostle for market share on hopes of regulatory easing**
+  [https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/](https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/)
+  As Japan signals possible regulatory loosening, crypto firms are positioning aggressively in its market. The story highlights the dynamic interplay between regulation and blockchain business growth in the Asia region.
+  ([Reuters][5])[5]: https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/?utm_source=chatgpt.com "Japan's crypto players jostle for market share on regulatory easing hopes" <!-- ChatGPT -->
+
+
 
 ### Market Snapshot
 
@@ -177,9 +276,17 @@ Gemini
 
 ### Looking Ahead
 
+- **McKinsey Reports on AI Agent Adoption and Scaling Challenges**
+    A major global survey from McKinsey revealed that while 88% of organizations now report using AI in at least one business function, most are still struggling to scale AI programs across the enterprise, remaining in the experimentation or piloting phase. The survey also highlighted that 62% of organizations are experimenting with **AI agents**—systems that can autonomously plan and execute multi-step workflows—indicating agents are the next major focus area for corporate AI investment.
+    * **Source:** McKinsey
+    * **Link:** [The state of AI in 2025: Agents, innovation, and transformation](https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai) <!-- Gemini-->
+
+- **The AI Boom's Mind-Boggling Valuations Reshape Global Economy**
+    The financial scale of the AI boom continues to shatter records, driving up the valuations of the world's largest tech firms. Nvidia reached an unprecedented **$5 trillion** market valuation, while Microsoft and Apple both hit $4 trillion in valuation. Furthermore, the major tech giants—including Google's parent company, which reported its first $100 billion quarter—have all revised their capital expenditure figures upward, committing billions more to build out the foundational infrastructure for future AI development.
+    * **Source:** The Guardian
+    * **Link:** [The mind-boggling valuations of AI companies](https://www.theguardian.com/global/2025/nov/04/the-mind-boggling-valuations-of-ai-companies) <!-- Gemini-->
+
 - The Ballad of the Prodigal Techbro. ([](https://conversationalist.org/2020/03/05/the-prodigal-techbro/))
-- tk ([]())
-- tk ([]())
 
 ### Odds & Ends
 
@@ -194,3 +301,6 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
+
+
+
